examples/test/testpolicy19089.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19089
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key27: value46
      key37: value31
      key6: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value30
          key20: value8
          key9: value11
      podSelector:
        matchLabels:
          key3: value42
          key30: value34
